GRHB-34: * move unique styles in same file, fix error message overflow, moved layout to common auth component

--- a/frontend/src/components/auth/styles.module.scss
+++ b/frontend/src/components/auth/styles.module.scss
@@ -1,47 +1,7 @@
-.formWrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 600px;
-  margin-right: 60px;
-  padding: 40px;
-  color: white;
-  background-color: var(--background-gray-400);
-}
-
 .main {
   display: flex;
   flex-grow: 1;
   justify-content: right;
-  align-items: center;
-}
-
-.formHeader {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.formTitle {
-  font-weight: 600;
-  font-size: 30px;
-}
-
-.formTitle,
-.formLink {
-  margin: 0;
-}
-
-.formContent {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding: 24px 0;
-}
-
-.buttonWrapper {
-  display: flex;
-  justify-content: center;
   align-items: center;
 }
 
