--- a/frontend/src/components/common/input/styles.module.scss
+++ b/frontend/src/components/common/input/styles.module.scss
@@ -35,7 +35,8 @@
 }
 
 .errorMessage {
-  min-height: 16px;
+  height: 16px;
+  overflow: hidden;
   color: var(--support-error-red-100);
   font-weight: 600;
   font-size: 12px;
